Remove test tag for testRecommendVM
